syntax = "proto3";
package MyLab1;
option java_multiple_files = true;
service HelloService {
  rpc SayHello(HelloRequest) returns (HelloResponse);
}
message HelloRequest {  string greeting = 1;}
message HelloResponse {  string reply = 1;}